adding README to tpcc projects + attempt to mitigate bug on not counting input files + cleaning tx input queues of tx workers after experiment